run build and fix alignment for viewProject

--- a/public/styles.css
+++ b/public/styles.css
@@ -12718,6 +12718,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   top: -3rem;
 }
 
+.top-1 {
+  top: 0.25rem;
+}
+
+.right-8 {
+  right: 2rem;
+}
+
 .left-0 {
   left: 0px;
 }
@@ -12754,16 +12762,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   left: 1rem;
 }
 
+.z-10 {
+  z-index: 10;
+}
+
 .z-50 {
   z-index: 50;
 }
 
 .z-20 {
   z-index: 20;
-}
-
-.z-10 {
-  z-index: 10;
 }
 
 .z-0 {
@@ -12785,6 +12793,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: 2rem;
 }
 
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
 .mr-4 {
   margin-right: 1rem;
 }
@@ -12801,16 +12814,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 1rem;
 }
 
-.mt-4 {
-  margin-top: 1rem;
+.mt-2 {
+  margin-top: 0.5rem;
 }
 
 .mb-6 {
   margin-bottom: 1.5rem;
 }
 
-.mt-2 {
-  margin-top: 0.5rem;
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .mr-2 {
@@ -13003,6 +13016,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding: 0.5rem;
 }
 
+.p-4 {
+  padding: 1rem;
+}
+
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -13064,8 +13081,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-bottom: 1rem;
 }
 
-.pt-6 {
-  padding-top: 1.5rem;
+.pt-2 {
+  padding-top: 0.5rem;
 }
 
 .pb-2 {
@@ -13125,6 +13142,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-highlight {
   --tw-text-opacity:1;
   color: rgb(64 137 156/var(--tw-text-opacity));
+}
+
+.underline {
+  -webkit-text-decoration-line: underline;
+  text-decoration-line: underline;
 }
 
 .backdrop-blur {
@@ -13691,16 +13713,12 @@ ul {
 }
 
 @media (min-width: 640px) {
-  .sm\:absolute {
-    position: absolute;
+  .sm\:top-3 {
+    top: 0.75rem;
   }
 
   .sm\:top-0 {
     top: 0px;
-  }
-
-  .sm\:right-8 {
-    right: 2rem;
   }
 
   .sm\:m-0 {
@@ -13722,6 +13740,10 @@ ul {
 
   .sm\:mb-0 {
     margin-bottom: 0px;
+  }
+
+  .sm\:mt-0 {
+    margin-top: 0px;
   }
 
   .sm\:block {
@@ -13746,6 +13768,10 @@ ul {
 
   .sm\:w-4\/6 {
     width: 66.666667%;
+  }
+
+  .sm\:w-2\/6 {
+    width: 33.333333%;
   }
 
   .sm\:w-6\/12 {
@@ -13784,6 +13810,11 @@ ul {
   .sm\:px-4 {
     padding-left: 1rem;
     padding-right: 1rem;
+  }
+
+  .sm\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
 
   .sm\:py-14 {
